opp test update

--- a/force-app/main/default/classes/OpportunityTriggerDummyTest.cls
+++ b/force-app/main/default/classes/OpportunityTriggerDummyTest.cls
@@ -2,7 +2,7 @@
 public with sharing class OpportunityTriggerDummyTest {
     @isTest
     public static void test(){
-        Opportunity opp = new Opportunity(Name = 'test');
+        Opportunity opp = new Opportunity(Name = 'test', StageName = 'Open', CloseDate = System.today() + 3);
         insert opp;
 
         System.assertEquals(true, true);
