some random debug for pipeline testing

--- a/force-app/main/default/classes/AccountProcessorTest.cls
+++ b/force-app/main/default/classes/AccountProcessorTest.cls
@@ -3,6 +3,7 @@ public with sharing class AccountProcessorTest {
     
     @isTest
     public static void testClass(){
+        System.debug('test');
         Test.startTest();
         Account acc = new Account(Name = 'Test acc');
         insert acc;
