--- a/force-app/main/default/classes/AccountProcessor.cls
+++ b/force-app/main/default/classes/AccountProcessor.cls
@@ -1,4 +1,4 @@
-public with sharing class AccountProcessor {
+public without sharing class AccountProcessor {
     
     @future
     public static void countContacts(List<Id> accountIdList){
